– переключалка подложек – убрал надписи на карте

--- a/kazinvest-front/src/assets/css/mapbox-gl.css
+++ b/kazinvest-front/src/assets/css/mapbox-gl.css
@@ -191,19 +191,16 @@
 }
 
 .mapboxgl-ctrl-attrib a {
-    color: rgba(0, 0, 0, 0.75);
-    text-decoration: none;
+    display: none;
 }
 
 .mapboxgl-ctrl-attrib a:hover {
-    color: inherit;
-    text-decoration: underline;
+    display: none;
 }
 
 /* stylelint-disable-next-line selector-class-pattern */
 .mapboxgl-ctrl-attrib .mapbox-improve-map {
-    font-weight: bold;
-    margin-left: 2px;
+    display: none;
 }
 
 .mapboxgl-attrib-empty {
